--- a/package.json
+++ b/package.json
@@ -11,19 +11,38 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/basic": "^7.0.0",
+    "@hapi/boom": "^10.0.0",
+    "@hapi/cookie": "^11.0.2",
     "@hapi/hapi": "^20.2.2",
+    "@hapi/inert": "^7.0.0",
+    "@hapi/joi": "^17.1.1",
+    "@hapi/vision": "^7.0.0",
+    "@themesberg/flowbite": "^1.3.0",
+    "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
+    "handlebars": "^4.7.7",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/colors": "^1.2.1",
     "@types/faker": "^6.6.9",
     "@types/hapi": "^18.0.7",
+    "@types/hapi__basic": "^5.1.2",
+    "@types/hapi__boom": "^9.0.1",
+    "@types/hapi__cookie": "^10.1.4",
+    "@types/hapi__inert": "^5.2.3",
+    "@types/hapi__joi": "^17.1.8",
+    "@types/hapi__vision": "^5.5.3",
+    "@types/hapi-auth-jwt2": "^8.6.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.6",
-    "faker": "^5.5.3",
+    "faker-br": "^0.4.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
